# TASK-14

./: .gitignore  README.md  metadata.json
repo/: .dockerignore  .env.example  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.db-host.yml  docker-compose.yml  nginx.conf  run_tests.sh  test.sh
repo/API_tests/: helpers.sh  run_api_tests.sh  test_01_health.sh  test_02_auth.sh  test_03_users.sh  test_04_kb.sh  test_05_inspection.sh  test_06_reviews.sh  test_07_admin.sh  test_08_messaging.sh  test_09_bulk_data.sh  test_10_audit.sh  test_11_disputes.sh  test_12_stepup_and_crossobj.sh
repo/frontend/: Cargo.toml  index.html
repo/frontend/src/: app.rs  main.rs
repo/frontend/tests/: smoke.spec.rs
repo/migrations/: 001_initial_schema.sql  002_knowledge_base.sql  003_inspection_tasks.sql  004_review_scorecards.sql  005_admin_dashboard.sql  006_messaging.sql  007_bulk_data.sql  008_disputed_classifications.sql  009_encrypted_fields.sql  010_device_fingerprint_hash.sql
repo/scripts/: coverage_lib_gate.sh
repo/src/: errors.rs  lib.rs  main.rs
repo/src/admin/: mod.rs  reports.rs
repo/src/audit/: export.rs  mod.rs  service.rs
repo/src/auth/: lockout_tests.rs  login.rs  mod.rs  password.rs  password_tests.rs  registration_tests.rs  session.rs
repo/src/db/: admin.rs  audit.rs  bulk_data.rs  devices.rs  dispute.rs  inspection.rs  knowledge_base.rs  messaging.rs  mod.rs  rate_limit.rs  review.rs  sessions.rs  users.rs
repo/src/dedup/: entity_resolution.rs  entity_resolution_tests.rs  fingerprint.rs  fingerprint_tests.rs  import_processor.rs  import_tests.rs  mod.rs
repo/src/encryption/: encryption_tests.rs  field_encryption.rs  key_management.rs  mod.rs
repo/src/images/: mod.rs  storage.rs  storage_tests.rs
repo/src/messaging/: mod.rs  payload_export.rs  payload_lifecycle_tests.rs  template_engine.rs  template_engine_tests.rs  (+2 more)
repo/tests/: api_surface.rs  health.rs  http_api.rs  route_catalog.rs
repo/unit_tests/: run_unit_tests.sh
(+81 files in other folders)
