[package]
name = "civicsort"
version = "0.1.0"
edition = "2021"
description = "CivicSort - Offline Operations Platform for City Sanitation Teams"
autotests = false

[[test]]
name = "http_api"
path = "tests/http_api.rs"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-service = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
argon2 = "0.5"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
log = "0.4"
csv = "1"
printpdf = "0.5"
dotenv = "0.15"
jsonwebtoken = "9"
thiserror = "1"
futures = "0.3"

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
